# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "day02"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code 2022 Day 2."
repository = "http://github.com/AdventOfCode2022-Massey/day02"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "day02"
path = "soln.rs"

[dependencies.aoc]
git = "http://github.com/BartMassey/libaoc.git"

[dependencies.aoc-reparse]
git = "http://github.com/BartMassey/libaoc.git"
